--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1266,7 +1266,7 @@ body {
                             width: 75%;
                             height: 2px;
                             background-color: var(--neutral-100);
-                            border-radius: var(--radius-circle);
+                            // border-radius: var(--radius-circle);
                         }
                     }
                 }
