--- a/assets/scss/styles.css
+++ b/assets/scss/styles.css
@@ -1094,7 +1094,7 @@ body {
     width: 75%;
     height: 2px;
     background-color: var(--neutral-100);
-    border-radius: var(--radius-circle);
+    border-radius: 2px;
   }
   .header .container .navbar-wrapper {
     gap: 24px;
