--- a/assets/scss/styles.css
+++ b/assets/scss/styles.css
@@ -733,7 +733,7 @@ body {
   color: var(--neutral-90);
 }
 .footer .footer-top .container {
-  padding: 60px 0;
+  padding: 60px 16px;
   display: grid;
   gap: 24px;
 }
@@ -773,7 +773,7 @@ body {
   border-top: 1px solid var(--neutral-20);
 }
 .footer .footer-bottom .container {
-  padding: 20px 0;
+  padding: 20px 16px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -921,6 +921,7 @@ body {
     width: 75%;
     height: 2px;
     background-color: var(--neutral-100);
+    border-radius: 2px;
   }
   .header .container .navbar-wrapper {
     gap: 24px;
@@ -1094,7 +1095,7 @@ body {
     width: 75%;
     height: 2px;
     background-color: var(--neutral-100);
-    border-radius: 2px;
+    border-radius: var(--radius-circle);
   }
   .header .container .navbar-wrapper {
     gap: 24px;
