--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -964,7 +964,7 @@ body {
 
     .footer-top {
         .container {
-            padding: 60px 0;
+            padding: 60px 16px;
             display: grid;
             gap: 24px;
 
@@ -1024,7 +1024,7 @@ body {
         border-top: 1px solid var(--neutral-20);
 
         .container {
-            padding: 20px 0;
+            padding: 20px 16px;
             display: flex;
             align-items: center;
             justify-content: center;
